compiler/test-data/parser/blueprint/errors/multiple_with.frel
module blueprint.errors.multiple_with

backend A {
    x : i32 = 0
}

backend B {
    y : i32 = 0
}

blueprint Test {
    with A
    with B
    text { "hello" }
}
